--- a/artist-sample.html
+++ b/artist-sample.html
@@ -70,25 +70,25 @@
           
         </article>
         <div class="artistGallery col-sm-4">
-          <a href="#"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
          <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
          <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
          <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
         <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
         <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
         <div class="artistGallery col-sm-4">
-          <img src="img/packardMain-thumb.jpg" class="img-responsive">
+          <a href="art-sample.html"><img src="img/packardMain-thumb.jpg" class="img-responsive"></a>
         </div>
       </div>
       
