--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section id="homeThumbs" class="row">
         <div class="col-md-4 thumbnail">
           <div class="homeThumb">
-            <a href="#">
+            <a href="events.html">
               <div class="captionH2">
                 <h2>Introducing Brent Foreman!</h2>
               </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="col-md-4 thumbnail">
           <div class="homeThumb">
-              <a href="#">
+              <a href="events.html">
                 <div class="captionH2">
                   <h2>sweet art sale</h2>
                 </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="col-md-4 thumbnail">
           <div class="homeThumb">
-            <a href="#">
+            <a href="events.html">
               <div class="captionH2">
                 <h2>John Gerber opening</h2>
               </div>
