--- a/artists.html
+++ b/artists.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <figure class="col-sm-4 col-lg-3 artistThumb">
-        <a href="#">
+        <a href="artist-sample.html">
           <img src="img/packardMain-thumb.jpg" class="img-responsive">
           <figcaption>
             <h2>Anne Packard</h2>
@@ -67,7 +67,7 @@
         </a>
       </figure>
       <figure class="col-sm-4 col-lg-3 artistThumb">
-        <a href="#">
+        <a href="artist-sample.html">
           <img src="img/packardMain-thumb.jpg" class="img-responsive">
           <figcaption>
             <h2>Anne Packard</h2>
@@ -75,7 +75,7 @@
         </a>
       </figure>
       <figure class="col-sm-4 col-lg-3 artistThumb">
-        <a href="#">
+        <a href="artist-sample.html">
           <img src="img/packardMain-thumb.jpg" class="img-responsive">
           <figcaption>
             <h2>Anne Packard</h2>
@@ -83,7 +83,7 @@
         </a>
       </figure>
       <figure class="col-sm-4 col-lg-3 artistThumb">
-        <a href="#">
+        <a href="artist-sample.html">
           <img src="img/packardMain-thumb.jpg" class="img-responsive">
           <figcaption>
             <h2>Anne Packard</h2>
